--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,23 @@
 @import '~bootstrap/scss/bootstrap';
+
+
+h1 {
+    text-align: center;
+    background-color: red;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+h3 {
+    text-align: center;
+}
