--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,7 +1,7 @@
 @import '~bootstrap/scss/bootstrap';
 
 
-.ciao{
+.ciao {
     text-align: center;
     display: flex;
 }
@@ -25,4 +25,8 @@ h3 {
 
 .miao {
     height: 100px;
+}
+
+.no {
+    display: flex;
 }
